@@ -85,6 +85,8 @@ Other Changes:
 
 Docking+Viewports Branch:
 
+- Fixed an assert in background dimming code, which could trigger after using
+  gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
 - Backends:
   - Win32: viewports created by backend forcefully direct messages to
     DefWindowProcW() in order to support Unicode text input. (#9099, #3653, #5961) [@ulhc]
